--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # dependencies
-/node_modules
+**node_modules
 
 # misc
 .DS_Store
@@ -7,6 +7,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+#wpress files
+*.wpress
 
 npm-debug.log*
 yarn-debug.log*
